# troyonthetrails

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  fly.toml  justfile  package-lock.json  package.json  tailwind.config.cjs  taskfile.yml
.github/workflows/: pr.yml  push.yml
assets/: main.css  site.webmanifest
beacon_service/: Cargo.toml
beacon_service/src/: beacon_loop.rs  discord.rs  lib.rs  main.rs  process_beacon.rs
db_service/: Cargo.toml
db_service/src/: encryption.rs  lib.rs
integration_tests/: Cargo.toml
integration_tests/tests/: integration_test.rs
map_service/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
map_service/src/: browser.rs  handler.rs  main.rs  script.js
shared_lib/: Cargo.toml
shared_lib/src/: env_utils.rs  lib.rs  object_storage.rs  strava_structs.rs  structs.rs  trail_structs.rs  utils.rs
shared_utils/: Cargo.toml
shared_utils/src/: env_utils.rs  utils.rs
src/: beacon_loop.rs  db_service.rs  discord.rs  encryption.rs  env_utils.rs  home_assistant.rs  main.rs  strava_api_service.rs  strava_data.rs  strava_token_utils.rs  utils.rs
src/route_handlers/: home.rs  mod.rs  strava_auth.rs  strava_callback.rs  strava_data.rs  trail_check.rs  troy_check.rs  webhooks.rs
src/strava/: api_service.rs  auth.rs  beacon.rs  mod.rs
strava_service/: Cargo.toml
strava_service/src/: auth.rs  beacon.rs  lib.rs
templates/components/: strava_data.html  trail_check.html  troy_check.html
templates/layouts/: base.html
templates/pages/: home.html  strava_callback.html
tiny_troy/: Cargo.toml  setup-guide.md
tiny_troy/src/: lib.rs
tiny_troy/static/: index.html
trail_service/: Cargo.toml
trail_service/src/: lib.rs  ride_counts.rs  trail_data.rs
web_service/: Cargo.toml  package-lock.json  package.json
web_service/src/: beacon_loop.rs  db_service.rs  discord.rs  main.rs  map_image.rs  trail_lib.rs
web_service/src/route_handlers/: home.rs  html_template.rs  map.rs  mod.rs  strava_auth.rs  strava_callback.rs  strava_data.rs  trail_check.rs  trail_ride_counts.rs  troy_check.rs  webhooks.rs
web_service/src/strava/: api_service.rs  auth.rs  beacon.rs
web_service/styles/: tailwind.css
web_service/templates/components/: trail_check.html  trail_stats.html  troy_check.html
web_service/templates/layouts/: base.html
web_service/templates/pages/: home.html
