[workspace]
members = ["web_service", "shared_lib"]
resolver = "2"

[workspace.dependencies]
shared_lib = { path = "./shared_lib" }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
askama = "0.12.1"
