[workspace]
members = [
  "web_service",
  "shared_lib",
  "db_service",
  "strava_service",
  "trail_service",
  "beacon_service",
  "map_service",
  "integration_tests"
]
resolver = "2"

[workspace.dependencies]
shared_lib = { path = "./shared_lib" }
db_service = { path = "./db_service" }
strava_service = { path = "./strava_service" }
beacon_service = { path = "./beacon_service" }
map_service = { path = "./map_service" }
web_service = { path = "./web_service" }
trail_service = { path = "./trail_service" }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11.27", features = ["json", "multipart"] }
chrono = "0.4.40"
