[package]
name = "db_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
tracing = {workspace = true}
cocoon = "0.4.3"
libsql = { git = "https://github.com/tursodatabase/libsql" }

