[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
db_service = {workspace = true}
strava_service = {workspace = true}
beacon_service = {workspace = true}
map_service = {workspace = true}
web_service = {workspace = true}
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
dotenv = {workspace = true}
tokio = {workspace = true}
