[package]
name = "map_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
anyhow = {workspace = true}
dotenv = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
