[package]
name = "map_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
staticmap = "0.4.2"
polyline = "0.11.0"
image = "0.25.5"
ab_glyph = "0.2.29"
imageproc = "0.25.0"
geo-types = "0.7.15"
tiny-skia = "0.11.4"
resvg = "0.45.0"
usvg = "0.45.0"

