[package]
name = "strava_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
db_service = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
tracing = {workspace = true}
reqwest = { workspace=true}
chrono = {workspace=true}

