[package]
name = "tiny-troy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "KeyboardEvent",
    "console",
] }
wasm-bindgen-futures = "0.4"
rapier2d = "0.22"
nalgebra = "0.33"

[profile.release]
opt-level = "z"
lto = true
