[package]
name = "web_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
tracing = {workspace = true}
dotenv = {workspace = true}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "fs", "compression-gzip"] }
askama = "0.12.1"
serde_urlencoded = "0.7.1"
chrono = "0.4.40"
cocoon = "0.4.3"
futures-util = "0.3.31"
humantime = "2.1.0"
lazy_static = "1.5.0"
libsql = { git = "https://github.com/tursodatabase/libsql" }
reqwest = { version = "0.11.27", features = ["json", "multipart"] }
bytes = "1"
url = "2.5.4"
staticmap = "0.4.2"
polyline = "0.11.0"
image = "0.25.5"
ab_glyph = "0.2.29"
imageproc = "0.25.0"
geo-types = "0.7.15"
tiny-skia = "0.11.4"
resvg = "0.45.0"
usvg = "0.45.0"

